[package]
name = "tygress"
description = "A library implementing popular networking transport protocols in user space with Rust"
version = "0.1.1"
edition = "2021"
authors = [
  "Andrew Guerrero <ajguerrer@gmail.com>"
]
documentation = "https://docs.rs/tygress"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ajguerrer/tygress"
keywords = ["ip", "tcp", "udp", "ethernet", "network"]
categories = ["embedded", "network-programming"]

[dependencies]
rustix = { version = "0.35.9", optional = true, features = ["fs", "net"] }
linux-raw-sys = {version = "0.1", optional = true, features = ["ioctl"] }

[dev-dependencies]
criterion = { version = "0.3.6", default_features = false }

[build-dependencies]
bindgen = { version = "0.60.1", optional = true }

[features]
default = []
netdev = ["std", "rustix", "linux-raw-sys"]
overwrite = [ "bindgen" ]
std = []
inline_always = []
inline_never = []

[[example]]
name = "playground"
required-features = ["netdev"]

[[bench]]
name = "bench"
harness = false
