[package]
name = "tygress"
description = "A library implementing popular networking transport protocols in user space with Rust"
version = "0.1.1"
edition = "2021"
authors = [
  "Andrew Guerrero <ajguerrer@gmail.com>"
]
documentation = "https://docs.rs/tygress"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ajguerrer/tygress"
keywords = ["ip", "tcp", "udp", "ethernet", "network"]
categories = ["embedded", "network-programming"]

[dependencies]
libc = { version = "0.2.149", optional = true }
rustix = { version = "0.38.20", optional = true, features = ["fs", "net", "event"] }

[dev-dependencies]
criterion = { version = "0.5.1"}

[build-dependencies]
bindgen = { version = "0.68.1", optional = true }

[features]
default = []
netdev = ["std", "rustix", "libc"]
std = []

[[example]]
name = "playground"
required-features = ["netdev"]

[[bench]]
name = "bench"
harness = false
