[package]
name = "tygress"
description = "A library implementing popular networking transport protocols in user space with Rust"
version = "0.1.1"
edition = "2021"
authors = [
  "Andrew Guerrero <ajguerrer@gmail.com>"
]
documentation = "https://docs.rs/tygress"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ajguerrer/tygress"
keywords = ["ip", "tcp", "udp", "ethernet", "network"]
categories = ["embedded", "network-programming"]

[dependencies]
rustix = { version = "0.38.30", default-features = false, features = ["fs", "net", "event"], optional = true }
libc = { version = "0.2.152", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default_features = false }

[features]
default = []
netdev = ["std", "rustix", "libc"]
std = []

[[example]]
name = "tuntap_interface"
required-features = ["netdev"]

[[example]]
name = "packet_socket"
required-features = ["netdev"]

[[bench]]
name = "bench"
harness = false
